Add community Q&A forum and meeting scheduler pages
- New community.html: Full Q&A forum with question posting and replies
- New meetings.html: Meeting booking system with calendar and availability
- css/community.css: Styling for community forum
- css/meetings.css: Styling for meeting scheduler
- js/community.js: Community forum functionality with localStorage
- js/meetings.js: Meeting scheduler with date/time validation
- Procfile: Railway.app deployment configuration
- package.json: Updated with engines specification
- index.html: Added navigation links to Community and Meetings pages

All data stored in localStorage for persistence.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node server.js",
     "dev": "set NODE_ENV=development && node server.js"
   },
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "keywords": [
     "portfolio",
     "salesforce",
